# gpt_stock_researcher

./: README.md  pyproject.toml  requirements.txt
infra/: app.py
infra/stock_analysis_infra/: __init__.py  stack.py
infra/tests/: test_stack.py
scripts/: daily_watchlist_runner.py
services/mcp_server/: main.py  model_registry.py  model_router.py  models.yaml  tool_registry.py
src/core/: config.py
src/core/schemas/: models.py
src/core/storage/: local_storage.py  run_index.py  training_writer.py
src/pipelines/: stock_pipeline.py
src/tools/: placeholder_tools.py
tests/: test_pipeline.py  test_storage.py
